# testing

./: .gitignore  ANALYSIS.md  DESIGN.md  INSTRUCTIONS.md  Makefile  README.md  config.yaml  pyproject.toml
artifacts/: .gitignore
docker/: Dockerfile
ml_service/: endpoints.py  main.py  mcqa_model.py  settings.py
notebooks/: Train_MCQA_Model.ipynb
tests/unit/ml_service/: test_endpoints.py
